//
// Copyright 2019-2021 the original author or authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";
option java_package = "cool.houge.grpc";
option java_outer_classname = "AuthPb";

message AuthRequest {
  // 访问令牌
  string token = 1;
}

message AuthResponse {
  // 用户ID
  int64 uid = 1;
}

service Auth {

  // JWT 用户认证
  rpc Auth(AuthRequest) returns(AuthResponse) {}
}

