syntax = "proto3";
option java_package = "cool.houge.grpc";
option java_outer_classname = "UserGroupPb";

message ListGidsRequest {
  int64 uid = 1;
}

message ListGidsResponse {
  repeated int64 gid = 1;
}

service UserGroup {

  // 查询用户的群组ID列表
  rpc ListGids(ListGidsRequest) returns(ListGidsResponse) {}
}